@@ -1,6 +1,7 @@
 cm4all-beng-proxy (0.7.26) unstable; urgency=low
 
   * memcached-client: schedule read event before callback
+  * istream-tee: continue with second output if first is closed
 
  --
 
